docs: Fix header on IE11 (#1065)

--- a/docs/_sass/_docs-top-nav.scss
+++ b/docs/_sass/_docs-top-nav.scss
@@ -3,6 +3,7 @@
   align-items: center;
   background-color: $docs-home-white-color;
   min-height: 5.5rem;
+  height: 5.5rem;
   padding: 0 1.5rem;
 
   &__logo {
